html: fix materical-icons alignment
v-align: middle does not look good on MacOS Chrome

--- a/html/style.css
+++ b/html/style.css
@@ -76,7 +76,6 @@ input.radio:not(:checked) ~ span:after {
 
 .material-icons {
   color: rgb(154, 154, 154);
-  vertical-align: middle;
 }
 
 .pointer {
